--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -10,10 +10,40 @@ body {
 
 .bio-intro {
     text-align: left;
-    padding-top: 150px;
+    padding-top: 300px;
     font-size: 3vh;
-    padding-left: 200px;
+  
     color: #8EA4C2;
+}
+
+.get-in-touch-button, .bio-intro {
+      margin-left: 180px;
+}
+
+.get-in-touch-button {
+    margin-top: 20px;
+}
+
+@media only screen and (max-width: 760px) {
+    .bio-intro {
+        text-align: left;
+        padding-top: 200px;
+        font-size: 3vh;
+        color: #8EA4C2;
+    }
+
+
+    .get-in-touch-button, .bio-intro {
+        margin-left: 30px;
+    }
+
+    .get-in-touch-button {
+        margin-top: 20px;
+    }
+
+    .bio-name {
+        font-size: 1vh;
+    }
 }
 
 .bio-name {
