--- a/my-portfolio/src/components/Button.css
+++ b/my-portfolio/src/components/Button.css
@@ -1,7 +1,7 @@
 .button {
-  position: relative;
+  /* position: relative;
   margin-top: 30px;
-  margin-left: 200px;
+  margin-left: 200px; */
   background :#055388;
   border: 1px solid #ff9933;
   padding: 15px;
@@ -15,6 +15,15 @@
   transition: all 300ms ease-in-out;
   left:0;
   top:0;
+}
+
+/* .get-in-touch-button */
+
+@media only screen and (max-width: 760px) {
+  .send-form-button {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .button:hover {
