--- a/my-portfolio/src/components/ContactPage.css
+++ b/my-portfolio/src/components/ContactPage.css
@@ -1,34 +1,34 @@
 .contact-form-container {
+    background: #95acca;
     width: 50%;
     margin: auto;
-    background: #556f92;
     padding: 50px 100px;
-    border-top: 10px solid #ff9933;
-    transform: translateY(25%);
+    border-top: 10px solid #f7882F;
+    transform: translateY(50%);
 }
 
 @media only screen and (max-width: 760px) {
   .contact-form-container {
-    
     width: auto;
-    padding: 20px 10px;
+    padding: 20px 50px;
     margin: 20px;
-    
-    /* transform: translateY(25%); */
+    transform: translateY(20%);
+    margin-right: 50px;
+    margin-left: 50px;
   }
 }
 
 #contact-form-wrapper input {
     font-size: 1.1em;
     padding: .4em 1em .4em;
-    margin: .5em 0;
-    background-color: #556f92;
+    margin: .20em 0;
+    background-color: #95acca;
 }
 
 label, input, textarea {
   width: 100%;
   font-size: 12pt;
-  color: #042a44;
+  color: #1a2930;
 }
 
 input, textarea {
@@ -36,7 +36,7 @@ input, textarea {
   border: none;
   border: 1px solid rgba(0,0,0,.1);
   border-radius: 2px;
-  background: #556f92;
+  background: #95acca;
   padding-left: 5px;
   outline: none;
   font-family: 'IBM Plex Sans', sans-serif;
