--- a/my-portfolio/src/components/Home.css
+++ b/my-portfolio/src/components/Home.css
@@ -8,7 +8,7 @@
     width: 350px;
     border-radius: 8px;
     margin-left: 50px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -21,11 +21,10 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -2.3em;
-    padding-left: 10px;
+    margin-top: -2.2em;
     font-size: 7.5vh;
     letter-spacing: -6px;
-    width: 700px;
+    width: 8em;
 }
 
 .first-name, .last-name {
