--- a/my-portfolio/src/components/Social.css
+++ b/my-portfolio/src/components/Social.css
@@ -1,15 +1,13 @@
 .social-container {
     display: flex;
-    position: absolute;
+    position: fixed;
     right: 10px;
     bottom: 0;  
     flex-direction: column;
     list-style: none;
     align-items: flex-end;
     padding-right: 10px;
-
 }  
-
 .social-container::after {
     content: '';
     display: block;
@@ -19,12 +17,27 @@
     height: 90px;
     background-color: #a8b2d1;
 }
-
 .social-icon {
     margin-top: 15px;
     cursor: pointer;
     height: 23px;
     width: 23px;
+}
+.footer {
+    position: static;
+    bottom: 10px;
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+    color: #ccd6f6;
+    line-height: 1;
+}
+.footer  a {
+    padding: 10px;
+    text-decoration: none;
+    color: #ccd6f6;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -48,30 +61,5 @@
         width: 30px;
     }
 }
-
-.footer {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    flex-direction: column;
-    text-align: center;
-    color: #ccd6f6;
-    line-height: 1;
-}
-
-.footer  a {
-    padding: 10px;
-    text-decoration: none;
-    color: #ccd6f6;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 12px;
-}
-/* 
-.footer-link {
-    color: #ccd6f6;
-    text-decoration: none;
-} */
-
-
 
 
