Updated mobile layout

--- a/my-portfolio/src/components/Hello.css
+++ b/my-portfolio/src/components/Hello.css
@@ -10,3 +10,12 @@
     color: #ff9933;
     font-size: 8vh;
 }
+
+@media only screen and (max-width: 760px) {
+    .bio-intro {
+      font-size: 3vh;
+    }
+    .ts-name {
+        font-size: 5vh;
+    }
+  }
